objects/License_Request_Log__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <formula>AND(IsActive__c == true, AND(Expiration_Date__c != NULL, DATEVALUE(Expiration_Date__c) &lt; TODAY()) == false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deactivated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deactivated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>License_Request_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deactivated_Date__c</fullName>
        <label>Deactivated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>End User</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>License Request Log</relationshipLabel>
        <relationshipName>License_Request_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Generated_By__c</fullName>
        <formula>if( 
  (ISNULL(Requested_By_Legacy__c) || ISBLANK(Requested_By_Legacy__c)),
  Requested_By__r.Full_Name__c,
  Requested_By_Legacy__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generated By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generation_Date__c</fullName>
        <label>Generation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Install_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Install Site</label>
        <referenceTo>LMS_Install_Site__c</referenceTo>
        <relationshipLabel>License Request Log</relationshipLabel>
        <relationshipName>License_Request_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal__c</fullName>
        <formula>License_Type__r.Internal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Text__c</fullName>
        <label>License Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License Type</label>
        <referenceTo>LMS_License_Types__c</referenceTo>
        <relationshipLabel>License Request Log</relationshipLabel>
        <relationshipName>License_Request_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Log_Type__c</fullName>
        <externalId>true</externalId>
        <label>Log Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAC_Address__c</fullName>
        <label>MAC Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Machine_Name__c</fullName>
        <label>Machine Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailConnector1__c</fullName>
        <label>Mail Connector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Microsoft Exchange Server</fullName>
                </value>
                <value>
                    <fullName>Lotus Notes</fullName>
                </value>
                <value>
                    <fullName>GroupWise</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>FBMC</fullName>
                </value>
                <value>
                    <fullName>Gmail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Merge_From__c</fullName>
        <label>Merge_From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Line</label>
        <referenceTo>LMS_ProductLine__c</referenceTo>
        <relationshipLabel>License Request Log</relationshipLabel>
        <relationshipName>License_Request_Log</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>Product_Line__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_By_Legacy__c</fullName>
        <label>Requested By (Legacy)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>License_Request_Log1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>License Request Log (Sold To)</relationshipLabel>
        <relationshipName>License_Request_Log1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SystemType1__c</fullName>
        <label>System Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aculab</fullName>
                </value>
                <value>
                    <fullName>Dialogic</fullName>
                </value>
                <value>
                    <fullName>HMP</fullName>
                </value>
                <value>
                    <fullName>Combination with Audiocodes</fullName>
                </value>
                <value>
                    <fullName>TAPI</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Media Server Based (4.0+ only)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Temp_License_Type__c</fullName>
        <label>Temp License Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This describes the type of request logged by users</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Dummy</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
                <value>
                    <fullName>Regular</fullName>
                    <default>true</default>
                    <label>Regular</label>
                </value>
                <value>
                    <fullName>Temporary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>License Request Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LRL-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Request Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>